--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,7 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans');
 
 // Variables
 @import 'variables';
@@ -8,9 +9,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-.navbar-brand {
-  color: $red !important;
-  span { font-family: 'Dancing Script', cursive; }
+ul { 
+  margin:0;
+  padding:0;
 }
 
 .navbar-laravel {
@@ -18,45 +19,24 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
-.berry-wrap {
-  background: #fff;
-
-  .berry-banner {
-    height: 450px;
-    background: url(/images/berry-banner.jpg) center no-repeat;
-    background-size: cover;
-    border-top: 4px solid $red;
-    position: relative;
-    text-align: center;
-    color: #fff;
-    &:before {
+.img-box {
+  position: relative;
+  height: 0;
+  padding-top: 100%;
+  background: #f4f4f4;
+  &:before {
       content: '';
+      display: block;
+      padding-top: 100%;
+  }
+  a, span {
       position: absolute;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      box-shadow: 0 0 1000px$red inset;
-    }
-    h1, p {
-      position: relative;
-      z-index: 1;
-      top: 150px;
-      margin: 0 100px;
-      font-size: 16px;
-    }
-    h1 {
-      margin-bottom: 16px;
-      font-size: 64px;
-      font-family: 'Dancing Script', cursive;
-    }
+      width: 100%;
+      height: 100%;
+      top: 0; left: 0;
+      background-size: contain; 
+      background-repeat: no-repeat;
+      background-position: center;
   }
-
-  .berry-market {
-    li {
-      list-style: none;
-      background: black;
-      height: 300px;
-    }
-  }
-
 }
 
