--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10690,3 +10690,17 @@ ul {
   background-position: center;
 }
 
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .card-columns {
+    -webkit-column-count: 3;
+            column-count: 3;
+  }
+}
+
+@media (min-width: 1200px) {
+  .card-columns {
+    -webkit-column-count: 4;
+            column-count: 4;
+  }
+}
+
