--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,3 +40,11 @@ ul {
   }
 }
 
+.card-columns {
+  @include media-breakpoint-only(lg) {
+      column-count: 3;
+  }
+  @include media-breakpoint-only(xl) {
+      column-count: 4;
+  }
+}
